# openthot

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  README.md  debug.env  docker-compose.only-services.yaml  docker-compose.yaml  dockerfile  pyproject.toml  secrets.env.example  setup.cfg
.github/workflows/: lint-and-test.yml
alembic/: env.py
alembic/versions/: 1d92ed56460f_add_audio_duration.py  514ed3b64736_move_transcript_field_to_raw.py  8225580d5e4d_add_audio_filename.py  853c13259cfd_add_transcript_source.py  9939aff3cbd4_add_speakers.py
openthot/: config.py  exceptions.py  object_storage.py
openthot/api/: __init__.py  main.py  utils.py
openthot/api/v1/: router.py
openthot/api/v1/routers/: auth.py  interviews.py  users.py
openthot/asr/: process.py  utils.py
openthot/asr/transcriptors/: __init__.py  whisper.py  whisperx.py  wordcab.py
openthot/commands/: __init__.py  config.py  run.py  standalone.py
openthot/db/: database.py  rw.py  schemas.py
openthot/models/: interview.py
openthot/models/transcript/: __init__.py  openthot.py  utils.py
openthot/tasks/: __init__.py  tasks.py
stt/: config.py  exceptions.py  logging.py  object_storage.py
stt/api/: auth.py  endpoints.py  main.py  utils.py
stt/api/routers/: interviews.py
stt/api/v1/: auth.py  router.py
stt/api/v1/routers/: auth.py  interviews.py  users.py
stt/asr/: __init__.py  process.py  transcription.py  utils.py  whisper.py  whisperx.py
stt/asr/transcriptors/: __init__.py  whisper.py  whisperx.py  wordcab.py
stt/db/: __init__.py  database.py  rw.py  schemas.py  users.py
stt/models/: interview.py  transcript.py  users.py
stt/models/transcript/: __init__.py  stt.py  sttsimple.py  utils.py  whisper.py  whisperx.py  wordcab.py
stt/tasks/: __init__.py  tasks.py
tests/: conftest.py  ott_simple.example1.json  stt_simple.example1.json  stt_simple.example2.json  test_object_storage.py  whisper.output.example1.json  whisperx.output.example2.json
tests/api/: test_main.py
tests/api/v1/: test_interviews.py
tests/asr/: test_process.py
tests/db/: test_rw.py
tests/models/: test_transcript.py
tests/models/transcript/: test_utils.py
