[tool.poetry]
name = "OpenThot"
version = "0.0.1"
description = "Transcribe interviews by using existing ASR engines."
authors = ["jissagn <7462969+jissagn@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
aiosqlite = "^0.19.0"
asgiref = "^3.6.0"
celery = { extras = ["pytest"], version = "^5.2.7" }
fastapi = "^0.97.0"
fastapi-users = { extras = ["sqlalchemy"], version = "^11.0.0" }
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
redis = "^4.5.4"
httpx = "^0.24.0"
simplejson = "^3.19.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.12" }
structlog = "^23.1.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
librosa = "^0.10.0.post2"


[tool.poetry.group.whisper.dependencies]
openai-whisper = "^20230314"

[tool.poetry.group.whisperx.dependencies]
whisperx = { git = "https://github.com/m-bain/whisperx.git", tag = "v3.1.1" }

# wordcab direct installation could be an option if it supported python>=3.10
# still keeping this section to remain consistent with other ASR deps
[tool.poetry.group.wordcab.dependencies]
# wordcab-transcribe = { git = "https://github.com/Wordcab/wordcab-transcribe.git", tag = "v0.3.1" }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
polyfactory = "^2.2.0"
schemathesis = "^3.19.5"
coverage = "^7.2.7"



[tool.poetry.group.cli.dependencies]
typer = "^0.9.0"
honcho = "^1.1.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.github
  | \.venv
  | \.vscode
  | build
  | dist
)/
'''


[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = 130


[tool.poetry.scripts]
openthot = "openthot.commands:cli"

[build-system]
requires = ["poetry>=1.5.1", "pip>=22.3.1"]
build-backend = "poetry.masonry.api"
