[tool.poetry]
name = "OpenThot"
version = "0.0.1"
description = "Transcribe interviews by using existing ASR engines."
authors = ["jissagn <7462969+jissagn@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
aiosqlite = "^0.19.0"
asgiref = "^3.6.0"
celery = { extras = ["pytest"], version = "^5.2.7" }
fastapi = "^0.97.0"
fastapi-users = { extras = ["sqlalchemy"], version = "^11.0.0" }
psycopg2-binary = "^2.9.6"
python-multipart = "^0.0.6"
redis = "^4.5.4"
httpx = "^0.24.0"
simplejson = "^3.19.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.12" }
structlog = "^23.1.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
librosa = "^0.10.0.post2"


[tool.poetry.group.whisper.dependencies]
openai-whisper = "^20230314"

[tool.poetry.group.whisperx.dependencies]
llvmlite = "^0.40.1"
faster-whisper = "^0.6.0"
transformers = "^4.30.2"
ffmpeg-python = "^0.2.0"
pandas = "^2.0.3"
setuptools  = "^65.0.0"
torch = {version = "^2.0.0+cpu", source = "pytorch"}
torchaudio = {version = "^2.0.1+cpu", source = "pytorch"}
nltk = "^3.8.1"

# pyannote-audio = "^2.1.1"  won't accept torch >= 2.0 ...
pyannote-audio = { git ="https://github.com/pyannote/pyannote-audio", rev = "35be745d3d77058fca1eaf318a3a060a0841bcfe"}
torchmetrics = {version = "^1.0.1"}
torch-audiomentations = {version = "^0.11.0"}



whisperx = { git = "https://github.com/m-bain/whisperx.git", tag = "v3.1.1" }
asteroid-filterbanks = ">=0.4"
einops = ">=0.6.0"
huggingface-hub = ">=0.13.0"
lightning = ">=2.0.1"
omegaconf = ">=2.1,<3.0"
pyannote-core = ">=5.0.0"
pyannote-database = ">=5.0.1"
pyannote-metrics = ">=3.2"
pyannote-pipeline = ">=2.3"
pytorch-metric-learning = ">=2.1.0"
rich = ">=12.0.0"
semver = ">=3.0.0"
soundfile = ">=0.12.1"
speechbrain = ">=0.5.14"
tensorboardx = ">=2.6"
[tool.poetry.group.wordcab.dependencies]
# wordcab direct installation could be an option if it supported python>=3.10
# still keeping this section to remain consistent with other ASR deps
# wordcab-transcribe = { git = "https://github.com/Wordcab/wordcab-transcribe.git", tag = "v0.3.1" }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.3.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
polyfactory = "^2.2.0"
schemathesis = "^3.19.5"



[tool.poetry.group.cli.dependencies]
typer = "^0.9.0"
honcho = "^1.1.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.github
  | \.venv
  | \.vscode
  | build
  | dist
)/
'''


[tool.isort]
profile = 'black'

[tool.flake8]
max-line-length = 130


[tool.poetry.scripts]
openthot = "openthot.commands:cli"

[build-system]
requires = ["poetry>=1.5.1", "pip>=22.3.1"]
build-backend = "poetry.masonry.api"
